# uahp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MATERIALS.md  README.md  SECURITY.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
csp/: __init__.py  csp.py
demos/: agent_node.py  benchmark.py  broken_agent.py  demo_output.txt  demo_pqc_handshake.py  demo_production_hardening.py  demo_registry_register.py  demo_signing_policy.py  demo_transport.py  run_demo.py
examples/: http_sidecar.py  mcp_sidecar.md
polis/: __init__.py  client.py  demo.py  quantum.py  schema.py  standing.py
tests/: test_crypto.py  test_extended.py  test_kem_flow.py  test_stack.py  test_two_process.py
uahp/: __init__.py  __main__.py  a2a.py  beacon.py  beacon_v6.py  cli.py  compliance.py  core.py  mcp_server.py  pqc.py  pqc_verify.py  propagation.py  record.py  reputation.py  signing_policy.py  verifier.py
uahp/registry/: __init__.py  main.py  models.py  service.py
uahp/schemas/: __init__.py  pqc.py  registry.py
uahp/transport/: __init__.py  base.py
